{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 16,
  "lineage": "3e8df3d5-bab5-d0e5-91d2-cd63ae0af8c4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-033fd6c032f901396",
            "domain": "vpc",
            "id": "eipalloc-0ec11b9cea98e58e5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f76af14a717bd036",
            "private_dns": "ip-10-0-1-159.ec2.internal",
            "private_ip": "10.0.1.159",
            "public_dns": "ec2-3-232-120-231.compute-1.amazonaws.com",
            "public_ip": "3.232.120.231",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870200162639:internet-gateway/igw-039e2fa212096df73",
            "id": "igw-039e2fa212096df73",
            "owner_id": "870200162639",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0416b0fc40107ad0a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ec11b9cea98e58e5",
            "id": "nat-0548b6b3e8e98fb2a",
            "network_interface_id": "eni-0f76af14a717bd036",
            "private_ip": "10.0.1.159",
            "public_ip": "3.232.120.231",
            "subnet_id": "subnet-0c95155845e86727c",
            "tags": {
              "Name": "NAT 1"
            }
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.main",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0853be7339968ea68",
            "owner_id": "870200162639",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0548b6b3e8e98fb2a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "vpc_id": "vpc-0416b0fc40107ad0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.gw1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0de079dd8b1ce332f",
            "owner_id": "870200162639",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-039e2fa212096df73",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "vpc_id": "vpc-0416b0fc40107ad0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d646b7d98fabdbc2",
            "route_table_id": "rtb-0853be7339968ea68",
            "subnet_id": "subnet-023a15b8f5badd082"
          },
          "dependencies": [
            "aws_nat_gateway.gw1",
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091ffde34fc914e06",
            "route_table_id": "rtb-0de079dd8b1ce332f",
            "subnet_id": "subnet-0c95155845e86727c"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870200162639:subnet/subnet-023a15b8f5badd082",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-023a15b8f5badd082",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "870200162639",
            "tags": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-0416b0fc40107ad0a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870200162639:subnet/subnet-0c95155845e86727c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c95155845e86727c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "870200162639",
            "tags": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-0416b0fc40107ad0a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:870200162639:vpc/vpc-0416b0fc40107ad0a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06c588a9b8f030760",
            "default_route_table_id": "rtb-0c43a086a0b84cda4",
            "default_security_group_id": "sg-0a1b6f07c2d6c6b2c",
            "dhcp_options_id": "dopt-00c2497a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0416b0fc40107ad0a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c43a086a0b84cda4",
            "owner_id": "870200162639",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}